updated Config file

--- a/Demo_Project/src/main/java/Config_File/Project.properties
+++ b/Demo_Project/src/main/java/Config_File/Project.properties
@@ -1,2 +1,6 @@
 URL=http://localhost/orangehrm/symfony/web/index.php/auth/login
 Excel_Path=NA
+#Data Base Credential
+
+#PreProd DB:
+PP_User_Name=xyz
