updated  with Vietnam config

--- a/Demo_Project/src/main/java/Config_File/OR.properties
+++ b/Demo_Project/src/main/java/Config_File/OR.properties
@@ -1,8 +1,12 @@
 #Text Fields
-Username_Text_id=txtUsername
-Password_Text_id=txtPassword
+Username_Text_id=user-contact
+Password_Text_id=v_password
+Home_PageText_xpath=//*[contains(text(),'Help')]
+OTP_Text_id=otp
 
 #Buttons
-Login_Button_xpath=//*[@id='btnLogin']
+Next_Button_xpath=//button[@class='btn btn-primary btn-block']
+Login_Button_xpath=//button[@class='btn btn-primary btn-block']
+Login_Button_Verify_xpath=//*[text()='Verify']
 
 #Links
