--- a/Demo_Project/src/main/java/Config_File/Project.properties
+++ b/Demo_Project/src/main/java/Config_File/Project.properties
@@ -1,4 +1,4 @@
-URL=http://localhost/orangehrm/symfony/web/index.php/auth/login
+URL=https://merchanthome-pp.zetaapps.in/#/?ifi=156924
 Excel_Path=NA
 #Data Base Credential
 
