Updated OR file

--- a/Demo_Project/src/main/java/Config_File/OR.properties
+++ b/Demo_Project/src/main/java/Config_File/OR.properties
@@ -6,3 +6,5 @@ Password_Text_id=txtPassword
 Login_Button_xpath=//*[@id='btnLogin']
 
 #Links
+Logout_Button_xpath=//*[@id='btnLogin']
+Logout_Link_xpath=//*[@id='btnLogin']
