--- a/Demo_Project/src/main/java/Config_File/OR.properties
+++ b/Demo_Project/src/main/java/Config_File/OR.properties
@@ -8,3 +8,4 @@ Login_Button_xpath=//*[@id='btnLogin']
 #Links
 Logout_Button_xpath=//*[@id='btnLogin']
 Logout_Link_xpath=//*[@id='btnLogin']
+Logout_Link_xpath=//*[@id='btnLogin']
