--- a/Demo_Project/src/main/java/Config_File/OR.properties
+++ b/Demo_Project/src/main/java/Config_File/OR.properties
@@ -10,3 +10,4 @@ Login_Button_xpath=//button[@class='btn btn-primary btn-block']
 Login_Button_Verify_xpath=//*[text()='Verify']
 
 #Links
+Logout_Button_Link_xpath=//*[text()='Verify']
